# cpkg

./: .gitignore  CMakeLists.txt  cpkg-package.json  default_repositories.txt
includes/: blank.h  terminal_character_help.h
src/: CMakeLists.txt
src/cpkg-cli/: CMakeLists.txt
src/cpkg-cli/includes/: CLIHelper.cpp  CLIHelper.hpp  cache.h  definitions.h
src/cpkg-cli/src/: main.cpp
src/cpkg-cli/src/cache/: cache.cpp
src/cpkg-cli/src/program_info/: ProgramInfo.h
src/cpkg-cli/src/program_info/linux/: ProgramInfo.cpp
src/cpkg-cli/src/program_info/windows/: ProgramInfo.cpp
src/cpkg-cli/src/repositories/: repositories.h
src/cpkg-cli/src/repositories/windows/: repositories.cpp
src/cpkg-cli/src/subcommands/registry/: search.cpp  update.cpp
src/cpkg-cli/src/updater/: updater.h
src/cpkg-cli/src/updater/linux/: updater.cpp
src/cpkg-cli/src/updater/windows/: updater.cpp
src/cpkg-cli/src/utils/: threading.cpp  threading.h  version.cpp  version.h
src/cpkg-core/: CMakeLists.txt
src/cpkg-core/includes/core/: scoped_ptr.hpp
src/cpkg-core/includes/core/versions/: utils.h
src/cpkg-core/src/utils/: utils.cpp
src/cpkg-updater/: CMakeLists.txt
src/cpkg-updater/src/: entry.cpp
src/cpkg-updater/src/utils/: version_info.cpp  version_info.h
